<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/terminal_background"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/leftMenu"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/terminal_background"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="16dp"
        android:weightSum="3">

        <Button
            android:id="@+id/buttonClockInOut"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_button_background"
            android:text="@string/clock_in_out"
            android:textColor="@color/terminal_on_background" />

        <Button
            android:id="@+id/buttonWorkOrders"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_button_background"
            android:text="@string/work_orders"
            android:textColor="@color/terminal_on_background" />

        <Button
            android:id="@+id/buttonIssueMaterials"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_button_background"
            android:text="@string/issue_materials"
            android:textColor="@color/terminal_on_background" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:background="@color/terminal_background"
        android:foregroundGravity="center"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/main_menu_placeholder"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:textColor="@color/terminal_on_background" />
    </FrameLayout>
</LinearLayout>
